| Summary: | ASTERISK-20611: sip registery lost after sip reload | ||||||
| Reporter: | Alisher (licedey) | Labels: | |||||
| Date Opened: | 2012-10-28 20:47:07 | Date Closed: | 2012-11-02 07:32:46 | ||||
| Priority: | Critical | Regression? | |||||
| Status: | Closed/Complete | Components: | Channels/chan_sip/Registration | ||||
| Versions: | 11.0.0 | Frequency of Occurrence | Constant | ||||
| Related Issues: |
| ||||||
| Environment: | CentOS 6.3 | Attachments: | ( 0) cli_debug.txt ( 1) sip.conf | ||||
| Description: | I installed the latest Asterisk 11 version. When asterisk starts trunks are registered, I can see the status of registered trunks after I run sip show registry command from CLI. After I run sip reload. All trunks unregister, and there is no way to register the trunks again. The sip show registry show empty results. The only way to register trunk is to unload sip module and load it again. The bug only related to Asterisk 11 version, everything is fine with Asterisk 10.9.0 and older versions. | ||||||
| Comments: | By: Rusty Newton (rnewton) 2012-10-29 11:37:08.239-0500 Alisher, Are you using FreePBX? Can you provide the SIP.conf and included files (sanitized)? Please provide a full log with VERBOSE and DEBUG enabled at least level 5 captured during the "sip reload". By: Alisher (licedey) 2012-10-30 00:21:19.438-0500 The sanitized SIP.conf file. By: Alisher (licedey) 2012-10-30 00:52:04.490-0500 Please find the attachment file with debug log captured from CLI. By: Alisher (licedey) 2012-10-30 00:53:59.122-0500 Hi Rusty, I am not using FreePBX. I installed Asterisk 11 from source code. By: Jonathan Rose (jrose) 2012-10-30 13:13:59.094-0500 https://reviewboard.asterisk.org/r/2171/ I will shortly have a patch for this up for review. | ||||||